@@ -91,6 +91,9 @@ jacoco {
 }
 
 tasks.withType(Test) {
+    // Allow access to internal methods used by powerMockito
+    // Will fail with Java17
+    jvmArgs '--illegal-access=permit'
     testLogging {
         events 'started', 'passed'
     }
